# a_simple_python_app

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
simple_app/: __init__.py  main.py
tests/: test_main.py
